--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
             <version>6.5.0</version>
         </dependency>
         <!-- MyBatis -->
-<!--        <dependency>-->
-<!--            <groupId>org.mybatis.spring.boot</groupId>-->
-<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
-<!--            <version>2.2.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
         <!-- MySQL 驱动 -->
         <dependency>
