--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ mybatis.mapper-locations=classpath:mappers/*xml
 #mybatis.configuration.map-underscore-to-camel-case=true
 ##\u6307\u5B9AMybatis\u7684\u5B9E\u4F53\u76EE\u5F55
 mybatis.type-aliases-package=com.example.telegram_bot.pojo
-spring.datasource.url=jdbc:mysql://8.130.49.69:3306/spider_base?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spider_base?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=w654646
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
