--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,17 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spider_base?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# \u5F00\u542FPageHelper\u63D2\u4EF6
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
+# \u914D\u7F6E\u7EBF\u7A0B\u6C60
+spring.task.execution.pool.core-size=10
+spring.task.execution.pool.max-size=25
+spring.task.execution.pool.queue-capacity=100
+# \u914D\u7F6Eredis
+spring.redis.host=8.130.49.69
+spring.redis.port=55551
+spring.redis.password=w654646
+spring.redis.database=0
