第一版上线

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
-server.port=55551
+server.port=55552
 #\u6307\u5B9AMybatis\u7684Mapper\u6587\u4EF6
 mybatis.mapper-locations=classpath:mappers/*xml
 ##\u5F00\u542Fpojo\u7684\u7C7B\u5C5E\u6027\u548C\u6570\u636E\u5E93\u5B57\u6BB5\u7684\u9A7C\u5CF0\u8F6C\u6362\uFF0C\u6BD4\u5982picName\u5728\u6570\u636E\u5E93\u4E2D\u4E3Apic_name
@@ -24,3 +24,5 @@ spring.redis.host=8.130.49.69
 spring.redis.port=55551
 spring.redis.password=w654646
 spring.redis.database=0
+file.dir=T:\\User\\Desktop\\\u516C\u53F8\\telegram_bot\\src\\main\\resources\\imgs\\
+phoenix.port=127.0.0.1
