--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,13 @@ spring.redis.host=8.130.49.69
 spring.redis.port=55551
 spring.redis.password=w654646
 spring.redis.database=0
-file.dir=T:\\User\\Desktop\\\u516C\u53F8\\telegram_bot\\src\\main\\resources\\imgs\\
+file.dir=/opt/module/imgs/
 phoenix.port=127.0.0.1
+# mail\u914D\u7F6E
+spring.mail.host=smtp.163.com
+spring.mail.username=holdenxiao@163.com
+spring.mail.password=GTMMEMCYPIIDPOZH
+spring.mail.properties.mail.smtl.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.banner.charset=utf-8
