--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.redis.password=w654646
 spring.redis.database=0
 file.dir=T:\\User\\Desktop\\\u516C\u53F8\\telegram_bot\\src\\main\\resources\\imgs\\
 phoenix.port=127.0.0.1
+pic.width=230
+pic.height=300
 # mail\u914D\u7F6E
 spring.mail.host=smtp.163.com
 spring.mail.username=holdenxiao@163.com
