--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ mybatis.mapper-locations=classpath:mappers/*xml
 #mybatis.configuration.map-underscore-to-camel-case=true
 ##\u6307\u5B9AMybatis\u7684\u5B9E\u4F53\u76EE\u5F55
 mybatis.type-aliases-package=com.example.telegram_bot.pojo
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spider_base?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/phoenix?serverTimezone=UTC&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -29,9 +29,9 @@ phoenix.port=127.0.0.1
 pic.width=230
 pic.height=300
 # mail\u914D\u7F6E
-spring.mail.host=smtp.163.com
-spring.mail.username=holdenxiao@163.com
-spring.mail.password=GTMMEMCYPIIDPOZH
+spring.mail.host=smtp.gmail.com
+spring.mail.username=holdenxiao@gmail.com
+spring.mail.password=xscpfocqodynbuvp
 spring.mail.properties.mail.smtl.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
